--- a/_config.yml
+++ b/_config.yml
@@ -7,33 +7,31 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: TheGrandPew                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Writeups you can learn from  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  A sick webapp security blog, your gonna find a lot of browser security vulns here!
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://thegrandpew.github.io'
 
-author: your_full_name                  # change to your full name
+author: Max Garrett                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: thegrandpew             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: PewGrand            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: TheGrandPew                  # it will shows as the copyright owner in Footer
+  email: thegrandpew@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/PewGrand      # change to your twitter homepage
+    - https://github.com/TheGrandPew       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -47,7 +45,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Australia/Brisbane
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
@@ -77,7 +75,7 @@ disqus:
 #
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode:    dark
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -87,7 +85,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: https://pbs.twimg.com/profile_images/1103256233195200512/uBkitSce_200x200.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
