--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ author: Max Garrett                  # change to your full name
 github:
   username: thegrandpew             # change to your github username
 
+future: true
+
 twitter:
   username: PewGrand            # change to your twitter username
 
